<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="Start">Here is your first step with us</string>
    <string name="Login">Login</string>
    <string name="Login1">Already have an account ?</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="ConfPass">Confirm Password</string>
    <string name="Register">Register</string>
    <string name="Already">Already a member ? Log In</string>
    <string name="account_information">Account Information</string>
    <string name="cart">Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signout">Signout</string>
    <string name="books">Books</string>
    <string name="bookinfo">Latest Books for Everyone</string>
    <string name="price1">₹1500</string>
    <string name="clothes">Clothes</string>
    <string name="clothesinfo">Brand new clothes</string>
    <string name="price2">₹10000</string>
    <string name="account_info">Account Info</string>
    <string name="mobile">8353919506</string>
    <string name="address">Yashodanagar,AmraiGaon,Indiranagar,Lucknow,UP-226028</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="homepageredirect">Back to Home</string>
    <string name="Signupredirecttext">New to our app? Signup</string>
    <string name="Logoutverify">Are you sure you want to Logout?</string>
    <string name="Logbtn">LogOut</string>
    <string name="price_format">%1$,.2f</string>
    <string name="place_order">Place Order</string>
    <string name="go_home">Go Home</string>
    <string name="userAddress">Address</string>
    <string name="setup_profile">Setup Profile</string>
    <string name="userDoB">13-12-2002</string>
    <string name="userEmail">niladrichaturvedi469@gmail.com</string>
    <string name="userContact">Contact</string>
    <string name="NameUser">Name</string>
    <string name="proceed">Proceed</string>
    <string name="userName">Niladri Chaturvedi</string>
    <string name="Emailinput">Email</string>
    <string name="userDoBinput">Date of Birth</string>

</resources>