<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/MainScrollView"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/productImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bookimg"
            android:paddingRight="10dp"
            android:paddingLeft="10dp" />


        <TextView
            android:id="@+id/productTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/productImg"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:text="@string/books" />

        <TextView
            android:id="@+id/productInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/productTag"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:text="@string/bookinfo" />

        <TextView
            android:id="@+id/productPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/productImg"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"
            android:textSize="18sp"
            android:text="@string/price1"
            android:layout_marginEnd="10dp"/>


        <Button
            android:id="@+id/placeOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_corner"
            android:text="@string/place_order"
            android:layout_marginTop="200dp"
            android:layout_below="@id/productInfo"/>

        <Button
            android:id="@+id/goHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_corner"
            android:text="@string/go_home"
            android:layout_marginTop="260dp"
            android:layout_below="@id/productInfo"/>

    </RelativeLayout>




</ScrollView>