<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/purplebg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/userimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            />

        <TextView
            android:id="@+id/userId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userimg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:text="User"
            android:layout_marginBottom="30dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/userId"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="20dp">


            <TextView
                android:id="@+id/AccountInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/account_info"
                android:textColor="@color/black"
                android:textSize="35sp" />

            <ImageView
                android:id="@+id/nameimg"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="80dp"
                android:src="@drawable/profilename" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="80dp"
                android:text="@string/Name"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nameinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="110dp"
                android:text="@string/userName"
                android:textColor="@color/gray"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/contactimg"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:layout_marginTop="170dp"
                android:src="@drawable/contact" />

            <TextView
                android:id="@+id/contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="170dp"
                android:text="@string/userContact"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/contactinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="200dp"
                android:text="@string/mobile"
                android:textColor="@color/gray"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/emailimg"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="260dp"
                android:src="@drawable/email" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="260dp"
                android:text="@string/Email"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emailinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="95dp"
                android:layout_marginTop="290dp"
                android:text="@string/userEmail"
                android:textColor="@color/gray"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/addressimg"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="350dp"
                android:src="@drawable/location" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="350dp"
                android:text="@string/userAddress"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/addressinfo"
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="380dp"
                android:text="@string/address"
                android:textColor="@color/gray"
                android:textSize="17sp"
                android:layout_marginBottom="30dp"/>

            <ImageView
                android:id="@+id/DOBimg"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="440dp"
                android:src="@drawable/birthday" />

            <TextView
                android:id="@+id/BirthDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="440dp"
                android:text="@string/date_of_birth"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/DOBinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="470dp"
                android:text="@string/userDoB"
                android:textColor="@color/gray"
                android:textSize="20sp"
                android:layout_marginBottom="25dp"/>


        </androidx.cardview.widget.CardView>


    </RelativeLayout>

</ScrollView>