<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    android:id="@+id/MainScrollView"
    tools:context=".ui.home.HomeFragment">

    <RelativeLayout
        android:id="@+id/RelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/books"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bookimg"
            android:paddingRight="10dp"
            android:paddingLeft="10dp" />

        <ImageView
            android:id="@+id/cartIcon1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/change_btn_color"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_below="@id/price"
            android:layout_marginEnd="10dp" />

        <TextView
            android:id="@+id/booktag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/books"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:text="@string/books" />

        <TextView
            android:id="@+id/bookinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/booktag"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:text="@string/bookinfo" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/books"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"
            android:textSize="18sp"
            android:text="@string/price1"
            android:layout_marginEnd="10dp"/>

        <ImageView
            android:id="@+id/clothes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/clothes"
            android:paddingRight="10dp"
            android:layout_below="@id/bookinfo"
            android:layout_marginTop="15dp"
            android:paddingLeft="10dp" />

        <TextView
            android:id="@+id/clothestag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/clothes"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:text="@string/clothes" />

        <TextView
            android:id="@+id/clothesinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/clothestag"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:text="@string/clothesinfo" />

        <ImageView
            android:id="@+id/cartIcon2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/change_btn_color"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_below="@id/price2"
            android:layout_marginEnd="10dp" />

        <TextView
            android:id="@+id/price2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/clothes"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"
            android:textSize="18sp"
            android:text="@string/price2"
            android:layout_marginEnd="10dp"/>
    </RelativeLayout>
</ScrollView>
