<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Cardview1"
            android:layout_marginStart="230dp"
            android:layout_marginTop="60dp"
            app:cardCornerRadius="100dp"
            app:cardBackgroundColor="@color/white">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/shopping"
                android:layout_gravity="center"
                tools:ignore="ContentDescription" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="60dp"
            android:text="@string/Start"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck,TextSizeCheck" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Cardview1"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="15dp"
            tools:ignore="RtlSymmetry">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="5dp"
                    android:ems="10"
                    android:hint="@string/Name"
                    android:inputType="text"
                    android:textSize="18sp"
                    tools:ignore="Autofill,TouchTargetSizeCheck,VisualLintTextFieldSize" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="5dp"
                    android:ems="10"
                    android:hint="@string/Email"
                    android:inputType="text"
                    android:textSize="18sp"
                    tools:ignore="Autofill,TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="5dp"
                    android:ems="10"
                    android:hint="@string/Password"
                    android:inputType="text"
                    android:textSize="18sp"
                    tools:ignore="Autofill,TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize" />

                <EditText
                    android:id="@+id/confPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="5dp"
                    android:ems="10"
                    android:hint="@string/ConfPass"
                    android:inputType="text"
                    android:textSize="18sp"
                    tools:ignore="Autofill,VisualLintTextFieldSize,TouchTargetSizeCheck" />

                <Button
                    android:layout_width="145dp"
                    android:layout_height="45dp"
                    android:id="@+id/RegisterBtn"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/rounded_corner"
                    android:text="@string/Register"
                    android:textColor="@color/white"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                <TextView
                    android:layout_width="match_parent"
                    android:id="@+id/LoginRedirectText"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/Login1"
                    android:textAlignment="center"
                    android:textColor="@color/bluish"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</ScrollView>